# yavpm

./: .gitignore  .pre-commit-config.yaml  README.md  dependencies.sh  pyproject.toml  run.sh
yavpm/: __main__.py  commandline.py  commands.py  fs.py  git.py  help.py  terminal.py  yavpm.py
