[tool.poetry]
name = "yavpm"
version = "0.1.0"
description = "Yet Another Vim Package Manager"
license = "MIT"
authors = ["Kyle Coffey <me@phytolizer.dev>", "Devin Baughman <dbaughman1993@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
